--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 /.bundle
 
 # Ignore all logfiles and tempfiles.
+coverage
+coverage/*
+DS_Store
 /log/*
 /tmp/*
 !/log/.keep
@@ -16,7 +19,6 @@
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
-
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
